--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Robotics Course Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://lauels.github.io/robotics_course
+url: https://LauEls.github.io/justthedocs_test
 
 aux_links:
   #Home: https://github.com/just-the-docs/just-the-docs-template
